2015-07-06  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	* sysdeps/unix/sysv/linux/aarch64/getcontext.S (__getcontext): Use q
	registers instead of d ones so the layout is kernel abi compatible.
	* sysdeps/unix/sysv/linux/aarch64/setcontext.S (__setcontext): Likewise.
	* sysdeps/unix/sysv/linux/aarch64/swapcontext.S (__swapcontext):
	Likewise.

2015-07-02  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	* sysdeps/aarch64/libm-test-ulps: Regenerated.

2015-07-01  Joseph Myers  <joseph@codesourcery.com>

	[BZ #18619]
	* sysdeps/ieee754/ldbl-128/s_expm1l.c (__expm1l): Force underflow
	and return argument in case of subnormal argument.

2015-07-01  Martin Sebor  <msebor@redhat.com>

	[BZ #18435]
	* nptl/Makefile: Add tst-once5.cc.
	* nptl/pthreadP.h (pthread_cleanup_push, pthread_cleanup_pop):
	Remove macro redefinitions.
	* nptl/tst-once5.cc: New test.

2015-07-01  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/powerpc/nofpu/libm-test-ulps: Regenerated.

	* sysdeps/arm/libm-test-ulps: Regenerated.

	* sysdeps/mips/mips32/libm-test-ulps: Regenerated.
	* sysdeps/mips/mips64/libm-test-ulps: Likewise.

2015-06-30  Torvald Riegel  <triegel@redhat.com>

	* nptl/DESIGN-systemtap-probes.txt: Remove lll_lock_wait,
	lll_lock_wait_private and lll_futex_wake probes.

	* sysdeps/unix/sysv/linux/i386/lowlevellock.h (BUSY_WAIT_NOP): Remove.
	* sysdeps/unix/sysv/linux/x86_64/lowlevellock.h (BUSY_WAIT_NOP):
	Likewise.
	* sysdeps/i386/i486/bits/atomic.h (atomic_delay): Rename to
	atomic_spin_nop.
	* sysdeps/x86_64/bits/atomic.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/lowlevellock.h (BUSY_WAIT_NOP): Rename
	to atomic_spin_nop and move ...
	* sysdeps/sparc/sparc32/sparcv9/bits/atomic.h (atomic_spin_nop):
	... here and ...
	* sysdeps/sparc/sparc64/bits/atomic.h: ... here.
	* nptl/pthread_mutex_lock.c (__pthread_mutex_lock): Use
	atomic_spin_nop instead of BUSY_WAIT_NOP.
	* nptl/pthread_mutex_timedlock.c (__pthread_mutex_timedlock):
	Likewise.