@@ -1,3 +1,7 @@
+2015-07-06  Wilco Dijkstra  <wdijkstr@arm.com>
+
+	* sysdeps/ieee754/support.c: Remove unused file.
+
 2015-07-06  Szabolcs Nagy  <szabolcs.nagy@arm.com>
 
 	* sysdeps/unix/sysv/linux/aarch64/getcontext.S (__getcontext): Use q
